<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registerLogin.RegisterActivity" android:background="@android:color/holo_green_light">
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextUsername"
            android:background="@drawable/rounded_edit" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:hint="@string/username"
            android:textColorHint="@color/color_hint" android:paddingLeft="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:background="@drawable/rounded_edit" android:hint="Password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail" android:paddingLeft="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:background="@drawable/rounded_edit" android:hint="@string/email" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername" android:paddingLeft="16dp"
    />
    <Button
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            android:background="@drawable/rounded_button"

    />
    <TextView
            android:text="@string/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/textViewAlreadyHaveAccount" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="@+id/buttonRegister"
            app:layout_constraintEnd_toEndOf="@+id/buttonRegister" android:textColor="@android:color/white"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="196dp"
                                                android:orientation="horizontal"/>
    <Button
            android:text="@string/select_photo"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPhoto"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:background="@drawable/rounded_button_oval"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:layout_constraintEnd_toEndOf="@+id/buttonPhoto"
            app:layout_constraintStart_toStartOf="@+id/buttonPhoto"
            app:layout_constraintTop_toTopOf="@+id/buttonPhoto"
            app:layout_constraintBottom_toBottomOf="@+id/buttonPhoto"
            android:id="@+id/photo_imageview_register"
            app:civ_border_width="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>